--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "YouTube [video](https://www.youtube.com/watch?v=UC1_ydr6Br4)",
   "main": "index.js",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "Mario Lazzari",
   "license": "ISC",
   "devDependencies": {
+    "@vitest/coverage-v8": "^2.1.3",
     "vitest": "^2.1.3"
   }
 }
